<resources>
    <string name="app_name">androidBootcampHw2</string>
    <string name="movies_text">Movies</string>

    <string name="interstellar_movie">Interstellar</string>
    <string name="interstellar_description">Interstellar is a 2014 American epic science fiction film directed by Christopher Nolan</string>
    <string name="intersteller_price">$ 4.5</string>
    <string name="the_dark_knight_movie">The Dark Knight</string>
    <string name="the_dark_knight_description">The Dark Knight is a superhero movie directed by Christopher Nolan</string>
    <string name="the_dark_knight_price">$ 5.35</string>
    <string name="button_text">BUY</string>

</resources>